# claude-code-jack-nyc

./: README.md  pyproject.toml
src/nyc_taxi_analytics/: cli.py  main.py
